// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`fetching data fetching movies 1`] = `
"[
  {
    "id": "<id>",
    "title": "The Great Adventure",
    "actors": [
      {
        "id": "<id>",
        "name": "John Doe",
        "numberOfPets": 2
      }
    ]
  },
  {
    "id": "<id>",
    "title": "The Mystery",
    "actors": [
      {
        "id": "<id>",
        "name": "Jane Smith",
        "numberOfPets": 1
      }
    ]
  },
  {
    "id": "<id>",
    "title": "The Thriller",
    "actors": [
      {
        "id": "<id>",
        "name": "John Doe",
        "numberOfPets": 2
      },
      {
        "id": "<id>",
        "name": "Jane Smith",
        "numberOfPets": 1
      },
      {
        "id": "<id>",
        "name": "Bob Johnson",
        "numberOfPets": 1
      }
    ]
  }
]"
`;

exports[`fetching data fetching single movie 1`] = `
"{
  "id": "<id>",
  "title": "The Great Adventure",
  "actors": [
    {
      "id": "<id>",
      "name": "John Doe",
      "numberOfPets": 2
    }
  ]
}"
`;

exports[`fetching data fetching non-existing movie 1`] = `undefined`;

exports[`run unused selections CLI 1`] = `
"Analyzing project... (this might take a while)

[31m✘[0m Found 4 unused selections.

File "Movies":
   In query "AllMovies":
    - actors: numberOfPets
    - title
   In query "MovieByTitle":
    - actors: name
    - id
"
`;

exports[`fetching data fetching single movie 2`] = `
"{
  "id": "<id>",
  "title": "The Great Adventure",
  "actors": [
    {
      "id": "<id>",
      "name": "John Doe",
      "numberOfPets": 2
    }
  ]
}"
`;
